[gd_scene load_steps=9 format=3 uid="uid://dun1cpardk2xw"]

[ext_resource type="Script" uid="uid://dsgxioo8wstff" path="res://game.gd" id="1_qclsr"]
[ext_resource type="PackedScene" uid="uid://dsw8raqgacxsc" path="res://player.tscn" id="2_a7q7f"]
[ext_resource type="Texture2D" uid="uid://cp80kk7ve4gj2" path="res://grasstile.png" id="3_qqaft"]
[ext_resource type="PackedScene" uid="uid://kncjihep4knv" path="res://tree_spawner.tscn" id="4_qqaft"]
[ext_resource type="PackedScene" uid="uid://dfhtv00kvuw0n" path="res://UpgradeMenu.tscn" id="6_edxvn"]

[sub_resource type="Curve2D" id="Curve2D_cp6e5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1055, -697, 0, 0, 0, 0, 1057, -697, 0, 0, 0, 0, 1057, 671, 0, 0, 0, 0, -1055, 663, 0, 0, 0, 0, -1055, -689)
}
point_count = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7jj1j"]
bg_color = Color(0.7204674, 0.72046757, 0.7204672, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_edxvn"]
bg_color = Color(0.16741043, 0.40969622, 0.6139475, 1)

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_qclsr")

[node name="CoinsCollected" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CoinsCollected"]
texture_filter = 1
offset_top = 39.0
offset_right = 349.0
offset_bottom = 121.0
color = Color(0.7184098, 0.6395594, 0.43901387, 1)

[node name="Label" type="Label" parent="CoinsCollected/ColorRect"]
layout_mode = 0
offset_left = 1.0
offset_right = 347.0
offset_bottom = 82.0
theme_override_colors/font_color = Color(0.81703126, 0.21579969, 0.24773318, 1)
theme_override_font_sizes/font_size = 50
max_lines_visible = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Player" parent="." instance=ExtResource("2_a7q7f")]
platform_floor_layers = 4294967040

[node name="Path2D" type="Path2D" parent="Player"]
curve = SubResource("Curve2D_cp6e5")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-1055, -697)

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.439216)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -107.0
offset_right = 358.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 124
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -32

[node name="ColorRect" type="TextureRect" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -5.0
offset_right = -1.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_qqaft")
stretch_mode = 1

[node name="TreeSpawner" parent="." instance=ExtResource("4_qqaft")]
trees_per_chunk = 2

[node name="gemcollected" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="gemcollected"]
z_index = 100
texture_filter = 1
offset_top = -3.0000002
offset_right = 4.0
offset_bottom = 24.0
scale = Vector2(478.64038, 1.5513769)
theme_override_styles/background = SubResource("StyleBoxFlat_7jj1j")
theme_override_styles/fill = SubResource("StyleBoxFlat_edxvn")
show_percentage = false

[node name="UpgradeMenu" parent="." instance=ExtResource("6_edxvn")]
z_index = 23

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
